[package]
name        = "portscanner"
version     = "2.0.0"
edition     = "2021"
description = "nmap-style port scanner with an embedded web GUI"

[[bin]]
name = "portscanner"
path = "src/main.rs"

[dependencies]
tiny_http         = "0.12"
ipnetwork         = "0.20"
pnet              = "0.34"
pnet_datalink     = "0.34"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
strip     = true
